Areglo atrbuto de trabajador para forms

--- a/apps/templates/home/forms-trabajador1.html
+++ b/apps/templates/home/forms-trabajador1.html
@@ -251,7 +251,7 @@
                 <!-- Trabajador -->
                 <div class="form-group">
                     <label for="trabajador">Usuario Relacionado(Nmro DNI):</label>
-                    <input type="number" class="form-control" id="group" name="group" required>
+                    <input type="number" class="form-control" id="trabajador" name="trabajador" required>
                 </div>
                 <!-- Tipo de Contrato y Contrato Opción mima fila-->
                 <div class="form-row">
@@ -351,7 +351,7 @@
                 <!-- Trabajador -->
                 <div class="form-group">
                   <label for="trabajador">Usuario Relacionado(Nmro DNI):</label>
-                  <input type="number" class="form-control" id="group" name="group" required>
+                  <input type="number" class="form-control" id="trabajador" name="trabajador" required>
                 </div>
                 <!-- Cuenta Bancaria Sueldo CCI y Cuenta Bancaria Sueldo Código -->
                 <div class="form-row">
@@ -420,7 +420,7 @@
                 <!-- Trabajador -->
                 <div class="form-group">
                   <label for="trabajador">Usuario Relacionado(Nmro DNI):</label>
-                  <input type="number" class="form-control" id="group" name="group" required>
+                  <input type="number" class="form-control" id="trabajador" name="trabajador" required>
                 </div>
             
                 <!-- Dirección País --><!-- Dirección Departamento --><!-- Dirección Provincia --><!-- Dirección Distrito -->
@@ -685,6 +685,13 @@
   <!-- Mi script apiUtils.js -->
   <script src="/static/assets/js/index/apiUtils.js"></script>
   <script src="/static/assets/js/forms/trabajadores.js"></script>
-  <script src="/static/assets/js/forms/formHandler.js"></script>
-
+  
+  <script src="/static/assets/js/forms/form01.js"></script>
+  <!--
+  <script src="/static/assets/js/forms/form02.js"></script>
+  <script src="/static/assets/js/forms/form03.js"></script>
+  <script src="/static/assets/js/forms/form04.js"></script>
+  <script src="/static/assets/js/forms/form05.js"></script>
+  <script src="/static/assets/js/forms/form06.js"></script>
+  <script src="/static/assets/js/forms/form07.js"></script> -->
 {% endblock javascripts %}
