Drodowns cargados dinamicamente correctamente

--- a/apps/templates/home/forms-trabajador1.html
+++ b/apps/templates/home/forms-trabajador1.html
@@ -529,7 +529,7 @@
         <div class="col-md-12">
           <div class="card">
             <div class="card-header">
-              <h3 class="card-title">Form Direcciones</h3>
+              <h3 class="card-title">Form Estudios</h3>
               <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
                   <i class="fas fa-minus"></i>
@@ -634,8 +634,8 @@
 
                   <!-- Sede de Colegiatura -->
                   <div class="form-group col-md-6">
-                    <label for="sede_colegiatura">Sede de Colegiatura:</label>
-                    <select class="form-control" id="sede_colegiatura" name="sede_colegiatura" required>
+                    <label for="id_sede_colegiatura">Sede de Colegiatura:</label>
+                    <select class="form-control" id="id_sede_colegiatura" name="id_sede_colegiatura" required>
                       <!-- Debes cargar dinámicamente las opciones -->
                     </select>
                   </div>
